Add new settings and update default values

--- a/settings.json
+++ b/settings.json
@@ -3,9 +3,12 @@
     "horizon": 6,
     "solver": "highs",
     "solver_path": "",
-    "preseason": true,
+    "preseason": false,
     "use_wc": 0,
     "use_tc": 0,
+    "team_id": null,
+    "current_squad": [],
+    "next_gw": null,
     "locked": [],
     "banned": [],
     "iterations": 1,
