--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 idna==3.10
 numpy==2.2.3
 pandas==2.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.1
 requests==2.32.3
 sasoptpy==1.0.5
 saspy==5.102.0
 six==1.17.0
+soupsieve==2.6
 swat==1.6.1
+typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
