--- a/settings.json
+++ b/settings.json
@@ -6,6 +6,7 @@
     "preseason": false,
     "use_wc": 0,
     "use_tc": 0,
+    "use_bb": 0,
     "team_id": null,
     "current_squad": [],
     "next_gw": null,
