--- a/settings.json
+++ b/settings.json
@@ -10,6 +10,7 @@
     "current_squad": [],
     "next_gw": null,
     "initial_itb": null,
+    "itb_change_per_gw": 0,
     "locked": [],
     "banned": [],
     "iterations": 1,
