--- a/settings.json
+++ b/settings.json
@@ -9,13 +9,31 @@
     "team_id": null,
     "current_squad": [],
     "next_gw": null,
-    "initial_itb": null,
-    "itb_change_per_gw": 0,
+    "initial_itb": 0.0,
+    "itb_change_per_gw": 0.0,
     "locked": [],
     "banned": [],
     "iterations": 1,
     "randomised": false,
     "gap": 0,
     "no_future_transfers": false,
-    "ft_penalty": 0
+    "ft_penalty": 0,
+    "position_constraints":  [
+        {
+            "teams": ["Galway"],
+            "pos": "GD",
+            "gws": [3],
+            "num": 3,
+            "type": "min",
+            "squad_lineup": "lineup"
+        },
+        {
+        "teams": ["Shamrock", "St Pats", "Derry"],
+        "pos": "GDMF",
+        "gws": [5,6,7],
+        "num": 0,
+        "type": "max",
+        "squad_lineup": "squad"
+        }
+    ]
 }
